syntax = "proto3";

package checks;

import "common/types.proto";
import "users/service.proto";

import "google/protobuf/timestamp.proto";
option go_package = "./checks"; // для Go

service Checks {
    // Create check
    rpc Create(CheckCreate) returns (CheckFailure);

    // Make check used
    rpc Remove(CheckId) returns (common.Response);

    // Use check
    rpc Use(CheckUse) returns (common.Response);

    // Get check created by user
    rpc GetUserChecks(users.Id) returns (AllChecksFailure);
}

message Check {
    int64 id = 1;
    string key = 2;
    Value value = 3;
    users.Id creator = 4;
    google.protobuf.Timestamp createdAt = 5;
}

message CheckFailure {
    optional Check check = 1;
    optional common.Failure failure = 2;
}

message Value {
    common.Currency currency = 1;
    int64 amount = 2;
}

message AllChecks {
    repeated Check checks = 1;
}

message AllChecksFailure {
    optional AllChecks checks = 1;
    optional common.Failure failure = 2;
}

message CheckCreate {
    users.Id creator = 1;
    Value value = 2;
}

message CheckUse {
    users.Id userId = 1;
    string key = 2;
}

message CheckId {
    int64 id = 1;
}